--- a/wp/wp-content/themes/ue-theme/assets/main.scss
+++ b/wp/wp-content/themes/ue-theme/assets/main.scss
@@ -169,8 +169,12 @@ img {
 
 #header {
 	.search-form {
-		min-width: 250px;
+		min-width: 200px;
 	}
+}
+
+.bg-light {
+	background-color: #0dcaf0 !important;
 }
 
 .navbar-brand {
