--- a/wp/wp-content/themes/ue-theme/assets/main.scss
+++ b/wp/wp-content/themes/ue-theme/assets/main.scss
@@ -182,6 +182,9 @@ img {
 		height: 40px;
 	}
 }
+.navbar-collapse {
+	justify-content: flex-end;
+}
 
 .navbar-static-top {
 	margin-bottom: $grid-gutter-width;
