--- a/wp/wp-content/themes/ue-theme/assets/main.scss
+++ b/wp/wp-content/themes/ue-theme/assets/main.scss
@@ -375,3 +375,50 @@ img {
 		margin-top: 60px;
 	}
 }
+
+/** SEARCH FORM*/
+// open on click search form behaviour //
+
+.home-nav.navbar-default .navbar-nav>li input.search-field {
+	color: #848484;
+	background-image: url(images/searchicon-w.png);
+  }
+  
+  .home-nav.navbar-default .navbar-nav>li input.search-field:focus {
+	border-color: #BABABA;
+  }
+  
+  .search-form {
+	  margin-top: 10px;
+	  margin-left: 30px;
+  }
+  
+  .search-field {
+	background-color: transparent;
+	background-image: url(images/searchicon.png);
+	background-position: 5px center;
+	background-repeat: no-repeat;
+	background-size: 24px 24px;
+	border: none;
+	cursor: pointer;
+	height: 37px;
+	margin: 3px 0;
+	padding: 0 0 0 34px;
+	position: relative;
+	-webkit-transition: width 400ms ease, background 400ms ease;
+	transition:         width 400ms ease, background 400ms ease;
+	width: 0;
+  }
+  
+  .search-field:focus {
+	background-color: transparent;
+	border: solid #e9e9e9;
+	border-width: 0 0 1px 0;
+	cursor: text;
+	outline: 0;
+	width: 230px;
+  }
+  
+  .search-submit {
+	display: none;
+  }
