--- a/wp/wp-content/themes/ue-theme/assets/main.scss
+++ b/wp/wp-content/themes/ue-theme/assets/main.scss
@@ -381,7 +381,8 @@ img {
 
 .home-nav.navbar-default .navbar-nav>li input.search-field {
 	color: #848484;
-	background-image: url(images/searchicon-w.png);
+	background-image: url(../../node_modules/bootstrap-icons/icons/search.svg);
+	// wp/wp-content/themes/ue-theme/node_modules/bootstrap-icons/icons/search.svg
   }
   
   .home-nav.navbar-default .navbar-nav>li input.search-field:focus {
@@ -395,7 +396,7 @@ img {
   
   .search-field {
 	background-color: transparent;
-	background-image: url(images/searchicon.png);
+	background-image: url(../../node_modules/bootstrap-icons/icons/search.svg);
 	background-position: 5px center;
 	background-repeat: no-repeat;
 	background-size: 24px 24px;
@@ -421,4 +422,48 @@ img {
   
   .search-submit {
 	display: none;
+  }
+
+  // Section proyectos-slider
+  .carousel-inner {
+	padding: 1em;
+  }
+  .card {
+	margin: 0 0.5em;
+	box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
+	border: none;
+  }
+  .carousel-control-prev,
+  .carousel-control-next {
+	background-color: #e1e1e1;
+	width: 6vh;
+	height: 6vh;
+	border-radius: 50%;
+	top: 50%;
+	transform: translateY(-50%);
+  }
+  @media (min-width: 768px) {
+	.carousel-item {
+	  margin-right: 0;
+	  flex: 0 0 33.333333%;
+	  display: block;
+	}
+	.carousel-inner {
+	  display: flex;
+	}
+  }
+  .card .img-wrapper {
+	  max-width: 100%;
+	  height: 13em;
+	  display: flex;
+	  justify-content: center;
+	  align-items: center;
+  }
+  .card img {
+	  max-height: 100%;
+  }
+  @media (max-width: 767px) {
+	.card .img-wrapper {
+	  height: 17em;
+	}
   }
