--- a/wp/wp-content/themes/ue-theme/assets/main.scss
+++ b/wp/wp-content/themes/ue-theme/assets/main.scss
@@ -427,7 +427,7 @@ img {
 
 /** HOMEPAGE template **/ 
 //  Main section
-main.homepage {
+main.videofull {
 	padding: 0px;
 	margin-top: 0px !important;
 }
