--- a/wp/wp-content/themes/ue-theme/assets/main.scss
+++ b/wp/wp-content/themes/ue-theme/assets/main.scss
@@ -431,6 +431,10 @@ main.videofull {
 	padding: 0px;
 	margin-top: 0px !important;
 }
+.content-over {
+	top: 50%;
+	padding-left: 5%;
+}
 
 // Section proyectos-slider
   .carousel-inner {
