--- a/wp/wp-content/themes/ue-theme/assets/main.scss
+++ b/wp/wp-content/themes/ue-theme/assets/main.scss
@@ -491,3 +491,12 @@ main.videofull {
 	}
 }
 
+// COUNTERS NUMBERS
+.counters {
+	padding: 3em 2em;
+	background: #0d6efd;
+	color: #fff;
+	text-align: center;
+}
+
+
