--- a/wp/wp-content/themes/ue-theme/assets/main.scss
+++ b/wp/wp-content/themes/ue-theme/assets/main.scss
@@ -59,6 +59,7 @@ $font-family-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetic
 $font-family-serif: Georgia, "Times New Roman", Times, serif;
 $font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 $font-family-base: $font-family-sans-serif;
+$font-family-helvetica: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 
 $link-decoration: none;
 
@@ -114,6 +115,7 @@ $link-decoration: none;
  */
 
 body {
+	font-family: $font-family-helvetica;
 	&.page-template-page-full {
 		#main {
 			max-width: 100%;
@@ -191,9 +193,8 @@ img {
 
 .navbar-brand {
 	img {
-		height: 40px;
+		height: 30px;
 	}
-	color: $white;
 }
 
 .navbar-collapse {
@@ -213,8 +214,12 @@ img {
 /* Footer */
 
 #footer {
-	background-color: rgb(255, 218, 218);
-
+	background-color: rgb(87,87,86);
+	color: #ffffff;
+	.footer-logo {
+		height: 40px;
+		padding-top: 20px ;
+	}
 	p {
 		margin-top: 10px;
 	}
@@ -222,9 +227,19 @@ img {
 	.menu-item {
 		a {
 			&[aria-current='page'] {
-				color: $link-hover-color;
+				// color: $link-hover-color;
 			}
 		}
+		a.nav-link {
+			color: #ffffff !important;
+		}
+	}
+	.social-footer {
+		display: flex;
+		flex-wrap: nowrap;
+		flex-direction: row;
+		justify-content: space-between;
+		padding-top: 10px;
 	}
 }
 
@@ -451,34 +466,83 @@ main.videofull {
 }
 .content-over {
 	top: 30%;
-	padding-left: 5%;
+	padding-left: 8%;
 	color: white;
 }
 
 
 // Section proyectos-slider
+section#proyectos-slider {
+	.btn.btn-link {
+		color: $gray-900;
+		padding-left: 0px;
+	}
+	.btn.btn-link.active {
+		text-decoration: underline;
+	}
+	.card {
+		// box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
+		border: none;
+	  }
+	.card img {
+		max-width: 100%;
+	}
+
+	.card-body {
+		position: absolute;
+		top: 70%;
+		width: 100%;
+		justify-content: center;
+		display: flex;
+		.title {
+			text-shadow: 2px 2px 5px rgba(0,0,0,0.6);
+			text-align: center;
+		}
+		.link {
+			text-align: center;
+		}
+	  }
+	.btn-card {
+		border-radius: 20px;
+	}
+}
   .carousel-inner {
-	padding: 1em;
+	// padding: 1em;
   }
-  .card {
-	margin: 0 0.5em;
-	box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
-	border: none;
-  }
+  .carousel-control-prev-icon {
+	width: 40%;
+	height: 40%;
+	background-image: url(/wp-content/themes/ue-theme/node_modules/bootstrap-icons/icons/chevron-left.svg);	
+}
+.carousel-control-next-icon {
+	width: 40%;
+	height: 40%;
+	background-image: url(/wp-content/themes/ue-theme/node_modules/bootstrap-icons/icons/chevron-right.svg);	
+}
   .carousel-control-prev,
   .carousel-control-next {
-	background-color: #e1e1e1;
-	width: 6vh;
-	height: 6vh;
-	border-radius: 50%;
+	// background-color: #e1e1e1;
+	width: 20vh;
+	height: 20vh;
+	// border-radius: 50%;
 	top: 50%;
 	transform: translateY(-50%);
   }
+  .carousel-control-prev {
+	justify-content: left;
+	left: -3rem;
+  }
+  .carousel-control-next {
+	justify-content: right;
+	right: -3rem;
+  }  
+  
   @media (min-width: 768px) {
 	.carousel-item {
-	  margin-right: 0;
-	  flex: 0 0 33.333333%;
+	  margin-right: 1rem;
+	  flex: 0 0 24%;
 	  display: block;
+	  overflow: hidden;
 	}
 	.carousel-inner {
 	  display: flex;
@@ -486,9 +550,9 @@ main.videofull {
   }
   .card .img-wrapper {
 	  max-width: 100%;
-	  height: 13em;
 	  display: flex;
 	  justify-content: center;
+	  flex-basis: content;
 	  align-items: center;
   }
   .card img {
@@ -500,12 +564,39 @@ main.videofull {
 	}
   }
 
+// Block tomemos un cafe
+section#banner-proxima-inversion {
+	.img-overflow {
+		overflow: hidden;
+		max-height: 300px;
+		background-color: #91610775;
+		display: flex;
+		align-content: center;
+		flex-wrap: wrap;
+
+		.block-display {
+			position: absolute;
+    		width: 100%;
+    		padding-top: 2rem;
+		}
+	}
+	img {
+		width: 100%;
+		z-index: -1;
+		position: relative;
+	}
+	.btn {
+		border-radius: 20px;
+	}
+}
+
   // Project Single
 .grid-item {
 	width: 32%; // define cantidad de columnas
 	margin-bottom: 10px;
 	img {
 		max-width: 99%;
+		max-height: 22em;
 	}
 }
 
