--- a/wp/wp-content/themes/ue-theme/assets/main.scss
+++ b/wp/wp-content/themes/ue-theme/assets/main.scss
@@ -62,6 +62,19 @@ $font-family-base: $font-family-sans-serif;
 $font-family-helvetica: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 
 $link-decoration: none;
+@media (max-width: 767px) {
+	.display-2 {
+		font-size: calc(0.3rem + 3.9vw) !important;
+		font-weight: 300 !important;
+		line-height: 1 !important;
+	}
+	.display-3 {
+		font-size: calc(0.5rem + 3.9vw) !important;
+		font-weight: 300 !important;
+		line-height: 1 !important;
+	}
+}
+
 
 // 3. Include remainder of required Bootstrap stylesheets
 @import "../node_modules/bootstrap/scss/variables";
@@ -196,10 +209,43 @@ img {
 		height: 30px;
 	}
 }
+@media (max-width: 768px) {
+	.navbar-brand {
+		img {
+			height: 20px;
+		}
+	}
+}
+
 
 .navbar-collapse {
 	justify-content: flex-end;
+	@media (max-width: 768px) {
+	 background-color: #575756;
+	 z-index: 3;
+	 padding: 1rem;
+	 margin-top: 1rem;
+	 // row position
+	 --bs-gutter-x: 1.5rem;
+	 --bs-gutter-y: 0;
+	 display: -webkit-box;
+	 display: -ms-flexbox;
+	 display: flex;
+	 -ms-flex-wrap: wrap;
+	 flex-wrap: wrap;
+	 margin-left: calc(var(--bs-gutter-x)*-.5);
+	 margin-right: calc(var(--bs-gutter-x)*-.5);
+	 flex-direction: column-reverse;
+	 align-items: flex-start;
+	}
 }
+.navbar-toggler {
+	border: var(--bs-border-width) solid white;
+}
+.navbar-toggler-icon {
+	filter: invert(99%) sepia(0%) saturate(7498%) hue-rotate(70deg) brightness(99%) contrast(105%);
+}
+
 
 .navbar-static-top {
 	margin-bottom: $grid-gutter-width;
@@ -418,6 +464,12 @@ img {
 	  margin-top: 10px;
 	  margin-left: 30px;
   }
+  @media (max-width: 768px) {
+	.search-form {
+		margin-left: 0px !important;
+		margin-right: 0px !important;
+	}
+  }
   
   .search-field {
 	background-color: transparent;
@@ -473,7 +525,14 @@ main.videofull {
 	top: 0px;
     flex-direction: column;
 	top: 20vh;
+	z-index: 0;
 }
+@media (max-width: 767px) {
+	.content-over {
+		top: 9vh;
+	}
+}
+
 
 
 // Section proyectos-slider
