--- a/wp/wp-content/themes/ue-theme/assets/main.scss
+++ b/wp/wp-content/themes/ue-theme/assets/main.scss
@@ -664,15 +664,6 @@ section#banner-proxima-inversion {
 	}
 }
 
-  // Project Single
-.grid-item {
-	width: 32%; // define cantidad de columnas
-	margin-bottom: 10px;
-	img {
-		max-width: 99%;
-		max-height: 22em;
-	}
-}
 
 // COUNTERS NUMBERS
 .counters {
@@ -693,7 +684,6 @@ section#banner-proxima-inversion {
     -webkit-transform: rotate(270deg);
     transform: rotate(270deg);
     padding-top: 2rem;
-    top: 4rem;
 	@media (max-width: 768px) {
 		position: inherit;
 		transform: rotateX(0deg);
@@ -702,4 +692,58 @@ section#banner-proxima-inversion {
 		padding-top: 1rem;
 		text-transform: capitalize;
 	}
+}
+.btn-card {
+	border-radius: 20px;
+}
+
+// Masonry CSS only
+section#galery-masonry {
+	.masonry {
+		-webkit-column-count: 1;
+		-moz-column-count: 1;
+		column-count: 1;
+		-webkit-column-gap: 1rem;
+		-moz-column-gap: 1rem;
+		column-gap: 1rem;
+	}
+	.masonry-item {
+		display: inline-block;
+		width: 100%;
+		transition: 1s ease all;
+		margin-bottom: 1rem;
+		img {
+			max-width: 100%;
+		}
+	}
+	@include media-breakpoint-up(md) {
+		.masonry {
+			-webkit-column-count: 2;
+			-moz-column-count: 2;
+			column-count: 2;
+			-webkit-column-gap: 1rem;
+			-moz-column-gap: 1rem;
+			column-gap: 1rem;
+		}
+	}
+	@include media-breakpoint-up(lg) {
+		.masonry {
+			-webkit-column-count: 3;
+			-moz-column-count: 3;
+			column-count: 3;
+			-webkit-column-gap: 1rem;
+			-moz-column-gap: 1rem;
+			column-gap: 1rem;
+		}
+	}
+	@include media-breakpoint-up(xl) {
+		.masonry {
+			-webkit-column-count: 4;
+			-moz-column-count: 4;
+			column-count: 4;
+			-webkit-column-gap: 1rem;
+			-moz-column-gap: 1rem;
+			column-gap: 1rem;
+		}
+	}	
 }
