--- a/wp/wp-content/themes/ue-theme/assets/main.scss
+++ b/wp/wp-content/themes/ue-theme/assets/main.scss
@@ -52,14 +52,29 @@ $yellow: #ffc107;
 $green: #198754;
 $teal: #20c997;
 $cyan: #0dcaf0;
+$white: #fff;
 
 // Fonts
 $font-family-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
 $font-family-serif: Georgia, "Times New Roman", Times, serif;
 $font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 $font-family-base: $font-family-sans-serif;
+$font-family-helvetica: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 
 $link-decoration: none;
+@media (max-width: 767px) {
+	.display-2 {
+		font-size: calc(0.3rem + 3.9vw) !important;
+		font-weight: 300 !important;
+		line-height: 1 !important;
+	}
+	.display-3 {
+		font-size: calc(0.5rem + 3.9vw) !important;
+		font-weight: 300 !important;
+		line-height: 1 !important;
+	}
+}
+
 
 // 3. Include remainder of required Bootstrap stylesheets
 @import "../node_modules/bootstrap/scss/variables";
@@ -113,6 +128,7 @@ $link-decoration: none;
  */
 
 body {
+	font-family: $font-family-helvetica;
 	&.page-template-page-full {
 		#main {
 			max-width: 100%;
@@ -166,30 +182,70 @@ img {
 
 /* Pre Header */ 
 .pre-header {
-	background-color: #d4f8ff7b;
+	position: relative;
+	background-color: #ffffff5a;
+	.container a {
+		color: $white;
+	}
+
 }
 
 /* Header */
 #header {
 	.search-form {
-		min-width: 200px;
+		min-width: 60px;
+	}
+	a.nav-link {
+		color:$white;
 	}
 }
 
 .bg-light {
-	background-color: #2dceee5c !important;
-
+	background-color: #ffffff00 !important;
 }
 
 .navbar-brand {
 	img {
-		height: 40px;
+		height: 30px;
+	}
+}
+@media (max-width: 768px) {
+	.navbar-brand {
+		img {
+			height: 20px;
+		}
 	}
 }
 
+
 .navbar-collapse {
 	justify-content: flex-end;
+	@media (max-width: 768px) {
+	 background-color: #575756;
+	 z-index: 3;
+	 padding: 1rem;
+	 margin-top: 1rem;
+	 // row position
+	 --bs-gutter-x: 1.5rem;
+	 --bs-gutter-y: 0;
+	 display: -webkit-box;
+	 display: -ms-flexbox;
+	 display: flex;
+	 -ms-flex-wrap: wrap;
+	 flex-wrap: wrap;
+	 margin-left: calc(var(--bs-gutter-x)*-.5);
+	 margin-right: calc(var(--bs-gutter-x)*-.5);
+	 flex-direction: column-reverse;
+	 align-items: flex-start;
+	}
 }
+.navbar-toggler {
+	border: var(--bs-border-width) solid white;
+}
+.navbar-toggler-icon {
+	filter: invert(99%) sepia(0%) saturate(7498%) hue-rotate(70deg) brightness(99%) contrast(105%);
+}
+
 
 .navbar-static-top {
 	margin-bottom: $grid-gutter-width;
@@ -204,8 +260,12 @@ img {
 /* Footer */
 
 #footer {
-	background-color: rgb(255, 218, 218);
-
+	background-color: rgb(87,87,86);
+	color: #ffffff;
+	.footer-logo {
+		height: 40px;
+		padding-top: 20px ;
+	}
 	p {
 		margin-top: 10px;
 	}
@@ -213,9 +273,19 @@ img {
 	.menu-item {
 		a {
 			&[aria-current='page'] {
-				color: $link-hover-color;
+				// color: $link-hover-color;
 			}
 		}
+		a.nav-link {
+			color: #ffffff !important;
+		}
+	}
+	.social-footer {
+		display: flex;
+		flex-wrap: nowrap;
+		flex-direction: row;
+		justify-content: space-between;
+		padding-top: 10px;
 	}
 }
 
@@ -394,28 +464,35 @@ img {
 	  margin-top: 10px;
 	  margin-left: 30px;
   }
+  @media (max-width: 768px) {
+	.search-form {
+		margin-left: 0px !important;
+		margin-right: 0px !important;
+	}
+  }
   
   .search-field {
 	background-color: transparent;
 	background-image: url(../../node_modules/bootstrap-icons/icons/search.svg);
 	background-position: 5px center;
 	background-repeat: no-repeat;
-	background-size: 24px 24px;
+	background-size: 20px 20px;
 	border: none;
 	cursor: pointer;
-	height: 37px;
+	height: 30px;
 	margin: 3px 0;
 	padding: 0 0 0 34px;
 	position: relative;
 	-webkit-transition: width 400ms ease, background 400ms ease;
 	transition:         width 400ms ease, background 400ms ease;
 	width: 0;
+	filter: invert(1);
   }
   
   .search-field:focus {
-	background-color: transparent;
-	border: solid #e9e9e9;
-	border-width: 0 0 1px 0;
+	background-color: #ffffff67;
+	border: solid #e9e9e900;
+	border-width: 0 0 0 0;
 	cursor: text;
 	outline: 0;
 	width: 230px;
@@ -428,9 +505,33 @@ img {
 /** HOMEPAGE template **/ 
 //  Main section
 
+p#breadcrumbs {
+	padding-top: 1rem;
+}
+
 main.videofull {
 	padding: 0px;
 	margin-top: 0px !important;
+	video {
+		z-index: -1;
+		position: relative;
+	}
+}
+.video-overflow {
+	background-color: #00000050;
+}
+.content-over {
+	color: #fff;
+	display: flex;
+	top: 0px;
+    flex-direction: column;
+	top: 20vh;
+	z-index: 0;
+}
+@media (max-width: 767px) {
+	.content-over {
+		top: 9vh;
+	}
 }
 .content-over {
 	top: 50%;
@@ -439,28 +540,77 @@ main.videofull {
 
 
 // Section proyectos-slider
+section#proyectos-slider {
+	.btn.btn-link {
+		color: $gray-900;
+		padding-left: 0px;
+	}
+	.btn.btn-link.active {
+		text-decoration: underline;
+	}
+	.card {
+		// box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
+		border: none;
+	  }
+	.card img {
+		max-width: 100%;
+	}
+
+	.card-body {
+		position: absolute;
+		top: 70%;
+		width: 100%;
+		justify-content: center;
+		display: flex;
+		.title {
+			text-shadow: 2px 2px 5px rgba(0,0,0,0.6);
+			text-align: center;
+		}
+		.link {
+			text-align: center;
+		}
+	  }
+	.btn-card {
+		border-radius: 20px;
+	}
+}
   .carousel-inner {
-	padding: 1em;
+	// padding: 1em;
   }
-  .card {
-	margin: 0 0.5em;
-	box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
-	border: none;
-  }
+  .carousel-control-prev-icon {
+	width: 40%;
+	height: 40%;
+	background-image: url(/wp-content/themes/ue-theme/node_modules/bootstrap-icons/icons/chevron-left.svg);	
+}
+.carousel-control-next-icon {
+	width: 40%;
+	height: 40%;
+	background-image: url(/wp-content/themes/ue-theme/node_modules/bootstrap-icons/icons/chevron-right.svg);	
+}
   .carousel-control-prev,
   .carousel-control-next {
-	background-color: #e1e1e1;
-	width: 6vh;
-	height: 6vh;
-	border-radius: 50%;
+	// background-color: #e1e1e1;
+	width: 20vh;
+	height: 20vh;
+	// border-radius: 50%;
 	top: 50%;
 	transform: translateY(-50%);
   }
+  .carousel-control-prev {
+	justify-content: left;
+	left: -3rem;
+  }
+  .carousel-control-next {
+	justify-content: right;
+	right: -3rem;
+  }  
+  
   @media (min-width: 768px) {
 	.carousel-item {
-	  margin-right: 0;
-	  flex: 0 0 33.333333%;
+	  margin-right: 1rem;
+	  flex: 0 0 24%;
 	  display: block;
+	  overflow: hidden;
 	}
 	.carousel-inner {
 	  display: flex;
@@ -468,26 +618,135 @@ main.videofull {
   }
   .card .img-wrapper {
 	  max-width: 100%;
-	  height: 13em;
 	  display: flex;
 	  justify-content: center;
+	  flex-basis: content;
 	  align-items: center;
   }
   .card img {
 	  max-height: 100%;
   }
   @media (max-width: 767px) {
+	.carousel-control-prev {
+		transform: translateX(40%);
+		filter: invert(99%) sepia(0%) saturate(7498%) hue-rotate(70deg) brightness(99%) contrast(105%);
+	}
+	.carousel-control-next {
+		transform: translateX(-40%);
+		filter: invert(99%) sepia(0%) saturate(7498%) hue-rotate(70deg) brightness(99%) contrast(105%);
+	}
 	.card .img-wrapper {
 	  height: 17em;
 	}
   }
 
-  // Project Single
-.grid-item {
-	width: 32%; // define cantidad de columnas
-	margin-bottom: 10px;
-	img {
-		max-width: 99%;
+// Block tomemos un cafe
+section#banner-proxima-inversion {
+	.img-overflow {
+		overflow: hidden;
+		max-height: 300px;
+		background-color: #91610775;
+		display: flex;
+		align-content: center;
+		flex-wrap: wrap;
+
+		.block-display {
+			position: absolute;
+    		width: 100%;
+    		padding-top: 2rem;
+		}
 	}
+	img {
+		width: 100%;
+		z-index: -1;
+		position: relative;
+	}
+	.btn {
+		border-radius: 20px;
+	}
+}
+
+
+// COUNTERS NUMBERS
+.counters {
+	color: #fff;
+	text-align: center;
+}
+
+
+// *******************
+// Interior Poyecto  *
+// *******************
+
+.logo-pr {
+	max-width: 40%;
+}
+.text-vert {
+    position: relative;
+    -webkit-transform: rotate(270deg);
+    transform: rotate(270deg);
+    padding-top: 2rem;
+	@media (max-width: 768px) {
+		position: inherit;
+		transform: rotateX(0deg);
+		padding-top: 0%;
+		top: 0;
+		padding-top: 1rem;
+		text-transform: capitalize;
+	}
+}
+.btn-card {
+	border-radius: 20px;
+}
+
+// Masonry CSS only
+section#galery-masonry {
+	.masonry {
+		-webkit-column-count: 1;
+		-moz-column-count: 1;
+		column-count: 1;
+		-webkit-column-gap: 1rem;
+		-moz-column-gap: 1rem;
+		column-gap: 1rem;
+	}
+	.masonry-item {
+		display: inline-block;
+		width: 100%;
+		transition: 1s ease all;
+		margin-bottom: 1rem;
+		img {
+			max-width: 100%;
+		}
+	}
+	@include media-breakpoint-up(md) {
+		.masonry {
+			-webkit-column-count: 2;
+			-moz-column-count: 2;
+			column-count: 2;
+			-webkit-column-gap: 1rem;
+			-moz-column-gap: 1rem;
+			column-gap: 1rem;
+		}
+	}
+	@include media-breakpoint-up(lg) {
+		.masonry {
+			-webkit-column-count: 3;
+			-moz-column-count: 3;
+			column-count: 3;
+			-webkit-column-gap: 1rem;
+			-moz-column-gap: 1rem;
+			column-gap: 1rem;
+		}
+	}
+	@include media-breakpoint-up(xl) {
+		.masonry {
+			-webkit-column-count: 4;
+			-moz-column-count: 4;
+			column-count: 4;
+			-webkit-column-gap: 1rem;
+			-moz-column-gap: 1rem;
+			column-gap: 1rem;
+		}
+	}	
 }
 
