--- a/wp/wp-content/themes/ue-theme/assets/main.scss
+++ b/wp/wp-content/themes/ue-theme/assets/main.scss
@@ -750,3 +750,9 @@ section#galery-masonry {
 	}	
 }
 
+// **************************
+// FONTS DEFINITION
+// **************************
+p.small {
+	font-size: .7rem;
+}
