#32 avance de obra

--- a/wp/wp-content/themes/ue-theme/assets/main.scss
+++ b/wp/wp-content/themes/ue-theme/assets/main.scss
@@ -698,6 +698,9 @@ section#banner-proxima-inversion {
 .btn-card {
 	border-radius: 20px;
 }
+i.avance {
+	color: $gray-500;
+}
 
 // Masonry CSS only
 section#galery-masonry {
