--- a/wp/wp-content/themes/ue-theme/assets/main.scss
+++ b/wp/wp-content/themes/ue-theme/assets/main.scss
@@ -684,6 +684,52 @@ section#banner-proxima-inversion {
 	text-align: center;
 }
 
+// Section Servicios
+section#servicios {
+	.card {
+		overflow: hidden;
+		max-height: 20rem;
+		color: #fff;
+		border-radius: unset;
+		@include media-breakpoint-up(md) {
+			max-height: 16rem;
+		}
+		@include media-breakpoint-up(xl) {
+			max-height: 20rem;
+		}
+		@include media-breakpoint-up(xxl) {
+			max-height: 23rem;
+		}
+		img.card-img {
+			max-height: 100%;
+    		border-radius: unset;
+			-webkit-filter: brightness(65%) hue-rotate(12deg) contrast(0.8);
+			-moz-filter: brightness(65%) hue-rotate(12deg) contrast(0.8);
+			-o-filter: brightness(65%) hue-rotate(12deg) contrast(0.8);
+			-ms-filter: brightness(65%) hue-rotate(12deg) contrast(0.8);
+			filter: brightness(65%) hue-rotate(12deg) contrast(0.8);
+
+		}
+	}
+	.img-container {
+		height: 53%;
+		img {
+			max-width: 7rem;
+		}
+		@include media-breakpoint-up(md) {
+			height: 38%;
+		}
+		@include media-breakpoint-up(xl) {
+			height: 65%;
+		}
+		@include media-breakpoint-up(xxl) {
+			height: 65%;
+		}
+
+	}
+}
+
+
 
 // *******************
 // Interior Poyecto  *
