#39 Styling Sumate al staff form

--- a/wp/wp-content/themes/ue-theme/assets/main.scss
+++ b/wp/wp-content/themes/ue-theme/assets/main.scss
@@ -741,6 +741,15 @@ section#servicios {
 	}
 }
 
+// Sumate al Staff Form
+div#wpcf7-f216-p14-o1 {
+	input.wpcf7-text {
+		border-style: none;
+    	border-bottom: 1px solid #a0a0a0;
+	}
+
+}
+
 
 
 // *******************
