--- a/wp/wp-content/themes/ue-theme/assets/main.scss
+++ b/wp/wp-content/themes/ue-theme/assets/main.scss
@@ -37,7 +37,7 @@ $gray-300: #dee2e6;
 $gray-400: #ced4da;
 $gray-500: #adb5bd;
 $gray-600: #6c757d;
-$gray-700: #495057;
+$gray-700: #575756;
 $gray-800: #343a40;
 $gray-900: #212529;
 
@@ -59,15 +59,53 @@ $font-family-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetic
 $font-family-serif: Georgia, "Times New Roman", Times, serif;
 $font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 $font-family-base: $font-family-sans-serif;
-$font-family-helvetica: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+$font-family-helvetica: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 
+// **************************
+// FONTS DEFINITION
+// **************************
+
+:root {
+	--bs-body-color: #575756 !important;
+	--bs-link-color: $gray-700 !important;
+	--bs-link-hover-color: $gray-900 !important;
+}
+.card {
+	--bs-card-img-overlay-padding: 2rem !important;
+}
+
+p.small {
+	font-size: .7rem;
+}
+h1.entry-title {
+	font-size: 3.5rem;
+	font-weight: 400;
+}
+ul.nav-pills button.btn {
+	font-size: 22px;
+}
+
+.display-1 {
+	font-size: 4.5rem !important;
+	line-height: 57pt !important;
+	font-weight: 400 !important;	
+}
 .display-2 {
-	font-size: 5.6rem !important;
-	line-height: 68pt !important;
+	font-size: 3.4rem !important;
+	line-height: 57pt !important;
+	font-weight: 400 !important;
 }
 .display-3 {
-	font-size: 4.4rem !important;
-	line-height: 68pt !important;
+	font-size: 2.5rem !important;
+	font-weight: 300 !important;
+	line-height: 55pt !important;
+}
+
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+	font-weight: 400 !important;
+}
+@media (min-width: 1200px) {
+	h3 {font-size: 1.5rem !important;}
 }
 
 $link-decoration: none;
@@ -82,6 +120,18 @@ $link-decoration: none;
 		font-weight: 300 !important;
 		line-height: 1 !important;
 	}
+}
+
+// Buttons customization
+.btn-secondary {
+	--bs-btn-bg: #575756 !important;
+	--bs-btn-border-color: #545556 !important;
+	--bs-btn-hover-bg: #808080 !important;
+	--bs-btn-hover-border-color: #7b7b7b !important;
+}
+.btn-light {
+	--bs-btn-bg: #ffffff !important;
+
 }
 
 
@@ -135,6 +185,16 @@ $link-decoration: none;
 /**
  * General
  */
+
+a:hover > i {
+	color: $gray-600 !important;
+}
+
+hr {
+	color: #1F140F !important;
+	opacity: unset !important;
+	border-top: 3px solid !important;
+}
 
 body {
 	font-family: $font-family-helvetica;
@@ -196,6 +256,9 @@ img {
 	padding: 0.3rem 0 0.3rem 0rem;
 	.container a {
 		color: $white;
+	}
+	.container a:hover {
+		color: $gray-300;
 	}
 
 }
@@ -307,6 +370,9 @@ header {
 		flex-direction: row;
 		justify-content: space-between;
 		padding-top: 10px;
+		i:hover {
+			color: $gray-300 !important;
+		}
 	}
 }
 
@@ -570,11 +636,13 @@ main.videofull {
 // Section proyectos-slider
 section#proyectos-slider {
 	.btn.btn-link {
-		color: $gray-900;
+		color: $gray-700;
 		padding-left: 0px;
+		font-weight: 400;
 	}
 	.btn.btn-link.active {
 		text-decoration: underline;
+		font-weight: 500;
 	}
 	.card {
 		// box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
@@ -586,7 +654,7 @@ section#proyectos-slider {
 
 	.card-body {
 		position: absolute;
-		top: 40%;
+		top: 30%;
 		width: 100%;
 		justify-content: center;
 		display: flex;
@@ -697,12 +765,17 @@ section#banner-proxima-inversion {
 
 // COUNTERS NUMBERS
 section#numeros {
-	h1.display-1 {
-		font-weight: 600;
+	h1.numero {
+		font-weight: 400;
+		font-size: 7.5rem;
 	}
 	.container-fluid {
 		background-color: #666766;
 		min-height: 18rem;
+	}
+	h4 {
+		font-size: 1.3rem;
+		font-weight: 400;
 	}
 
 }
@@ -864,19 +937,6 @@ section#galery-masonry {
 			column-gap: 1rem;
 		}
 	}	
-}
-
-// **************************
-// FONTS DEFINITION
-// **************************
-p.small {
-	font-size: .7rem;
-}
-h1.entry-title {
-	font-size: 70px;
-}
-ul.nav-pills button.btn {
-	font-size: 22px;
 }
 
 // ******** Results page ********
