--- a/wp/wp-content/themes/ue-theme/assets/main.scss
+++ b/wp/wp-content/themes/ue-theme/assets/main.scss
@@ -842,13 +842,14 @@ section#servicios {
 }
 
 // Sumate al Staff Form
-div#wpcf7-f216-p14-o1 {
-	input.wpcf7-text {
-		border-style: none;
-    	border-bottom: 1px solid #a0a0a0;
-	}
-
+input.wpcf7-form-control {
+	border-style: none;
+	border-bottom: 1px solid #a0a0a0;
 }
+input.wpcf7-form-control.filecv {
+	border-bottom: none;
+}
+
 
 
 // *******************
@@ -948,6 +949,7 @@ section#galery-masonry {
 	input, textarea {
 		border-style: none;
     	border-bottom: 1px solid #a0a0a0;
+		width: 100%;
 	}
 	input.submit {
 		background-color: #575756!important;
