--- a/wp/wp-content/themes/ue-theme/assets/main.scss
+++ b/wp/wp-content/themes/ue-theme/assets/main.scss
@@ -55,11 +55,14 @@ $cyan: #0dcaf0;
 $white: #fff;
 
 // Fonts
-$font-family-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
-$font-family-serif: Georgia, "Times New Roman", Times, serif;
-$font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-$font-family-base: $font-family-sans-serif;
-$font-family-helvetica: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+// $font-family-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
+// $font-family-serif: Georgia, "Times New Roman", Times, serif;
+// $font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+// $font-family-base: $font-family-sans-serif;
+// $font-family-helvetica: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;700&display=swap');
+$font-family: 'Raleway', sans-serif;
 
 // **************************
 // FONTS DEFINITION
@@ -69,6 +72,8 @@ $font-family-helvetica: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", san
 	--bs-body-color: #575756 !important;
 	--bs-link-color: $gray-700 !important;
 	--bs-link-hover-color: $gray-900 !important;
+	--bs-body-font-weight: 300 !important;
+	--bs-body-font-size: 14px !important;
 }
 .card {
 	--bs-card-img-overlay-padding: 2rem !important;
@@ -88,16 +93,16 @@ ul.nav-pills button.btn {
 .display-1 {
 	font-size: 4.5rem !important;
 	line-height: 57pt !important;
-	font-weight: 400 !important;	
+	font-weight: 700 !important;	
 }
 .display-2 {
 	font-size: 3.4rem !important;
 	line-height: 57pt !important;
-	font-weight: 400 !important;
+	font-weight: 500 !important;
 }
 .display-3 {
 	font-size: 2.5rem !important;
-	font-weight: 300 !important;
+	font-weight: 500 !important;
 	line-height: 55pt !important;
 }
 
@@ -204,7 +209,7 @@ hr {
 }
 
 body {
-	font-family: $font-family-helvetica;
+	font-family: $font-family;
 	&.page-template-page-full {
 		#main {
 			max-width: 100%;
@@ -295,14 +300,14 @@ header {
 @media (max-width: 768px) {
 	.navbar-brand {
 		img {
-			height: 20px;
+			height: 35px;
 		}
 	}
 }
 @media (max-width: 768px) {
 	.navbar-brand {
 		img {
-			height: 20px;
+			height: 30px;
 		}
 	}
 }
@@ -330,8 +335,11 @@ header {
 	 align-items: flex-start;
 	}
 }
-.navbar-toggler {
-	border: var(--bs-border-width) solid white;
+.navbar-toggler,
+.navbar-toggler:focus {
+	//border: var(--bs-border-width) solid white;
+	border: none;
+    box-shadow: none;
 }
 .navbar-toggler-icon {
 	filter: invert(99%) sepia(0%) saturate(7498%) hue-rotate(70deg) brightness(99%) contrast(105%);
@@ -375,8 +383,7 @@ header {
 		display: flex;
 		flex-wrap: nowrap;
 		flex-direction: row;
-		justify-content: space-between;
-		padding-top: 10px;
+		justify-content: space-evenly;
 		i:hover {
 			color: $gray-300 !important;
 		}
@@ -585,11 +592,16 @@ header {
   
   .search-field:focus {
 	background-color: #ffffff67;
-	border: solid #e9e9e900;
+	// border: solid #e9e9e900;
+	border: none;
 	border-width: 0 0 0 0;
 	cursor: text;
-	outline: 0;
+	// outline: 0;
+	outline: none;
 	width: 230px;
+	box-shadow: 0 0 0 0.05rem rgb(0 0 0 / 10%);
+	border-radius: 0.8rem;
+	height: 2rem;
   }
   
   .search-submit {
@@ -710,7 +722,7 @@ section#proyectos-slider {
   }
   .carousel-control-prev {
 	justify-content: left;
-	left: -3rem;
+	left: -3.5rem;
   }
   .carousel-control-next {
 	justify-content: right;
@@ -756,7 +768,7 @@ section#proyectos-slider {
 section#banner-proxima-inversion {
 	.img-overflow {
 		overflow: hidden;
-		max-height: 250px;
+		max-height: 450px;
 		background-color: #bb9872a6;
 		display: flex;
 		align-content: center;
@@ -765,7 +777,7 @@ section#banner-proxima-inversion {
 		.block-display {
 			position: absolute;
     		width: 100%;
-    		padding-top: 2rem;
+    		padding-top: 8rem;
 		}
 	}
 	img {
