--- a/wp/wp-content/themes/ue-theme/assets/main.scss
+++ b/wp/wp-content/themes/ue-theme/assets/main.scss
@@ -791,7 +791,7 @@ section#banner-proxima-inversion {
 		}
 	}
 	img {
-		width: 100%;
+		width: -webkit-fill-available;
 		z-index: -1;
 		position: relative;
 	}
