--- a/wp/wp-content/themes/ue-theme/assets/main.scss
+++ b/wp/wp-content/themes/ue-theme/assets/main.scss
@@ -791,9 +791,10 @@ section#banner-proxima-inversion {
 		}
 	}
 	img {
-		width: -webkit-fill-available;
+		width: initial;
 		z-index: -1;
 		position: relative;
+		height: 400px;
 	}
 	.btn {
 		border-radius: 20px;
